tests/attrib/01-mismatch.stderr
error: Expected generic `<const G : usize>`
 --> $DIR/01-mismatch.rs:4:12
  |
4 | struct Test<const D: usize> {}
  |            ^
